Table of Contents

--- a/JupyterTutorial.ipynb
+++ b/JupyterTutorial.ipynb
@@ -4,9 +4,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='TableOfContents'></a>\n",
+    "# Table of Contents\n",
+    "\n",
+    "1. <a href='#Introduction'>Introduction</a>\n",
+    "2. <a href='#Markdown'>Basics of Markdown</a>\n",
+    "3. <a href='#CodeCells'>Basics of Code Cells</a>\n",
+    "4. <a href='#Python'>Basics of Python</a>\n",
+    "5. <a href='#Reading'>Reading and Writing Files, feat. xkcd</a>\n",
+    "6. <a href='#DataAnalysis'>Data Analysis, feat. numpy, scipy, and matplotlib</a>\n",
+    "7. <a href='#Conclusion'>Conclusion</a>\n",
+    "8. <a href='#Sources'>Sources</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='Introduction'></a>\n",
+    "\n",
+    "# Introduction\n",
+    "<a href='#TableOfContents'>Back to Table of Contents</a>\n",
+    "\n",
     "Let's get started with Jupyter Notebook! \n",
     "\n",
-    "Jupyter Notebook is a tool for interactive, scientific computing. It is a [computing shell](https://en.wikipedia.org/wiki/Shell_(computing), which means that it can run code in a programming language, in this case, Python.\n",
+    "Jupyter Notebook is a tool for interactive, scientific computing. It is a [computing shell](https://en.wikipedia.org/wiki/Shell_(computing)), which means that it can run code in a programming language, in this case, Python.\n",
     "\n",
     "But it's no ordinary shell. Jupyter Notebook is great because:\n",
     "    \n",
@@ -55,15 +77,19 @@
    "source": [
     "__Run the User Interface Tutorial__ by going to \"Help\" under the toolbar, and clicking \"User Interface Tour.\"\n",
     "\n",
-    "Once you're done with that, we can begin the tutorial."
+    "Once you're done with that, we can begin the tutorial.\n",
+    "\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Part 1: Basics of Markdown\n",
-    "======================================"
+    "<a id='Markdown'></a>\n",
+    "\n",
+    "# Part 1: Basics of Markdown\n",
+    "<a href='#TableOfContents'>Back to Table of Contents</a>"
    ]
   },
   {
@@ -195,7 +221,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='CodeCells'></a>\n",
+    "\n",
     "# Part 2: Basics of Code Cells\n",
+    "\n",
+    "<a href='#TableOfContents'>Back to Table of Contents</a>\n",
     "\n",
     "Below is a code cell. To run it, press *Shift+Enter*.\n",
     "\n",
@@ -227,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Code cells aren't just python cells. You can issue terminal commands by prefacing the command with an exclamation point (!)"
+    "Code cells aren't just python cells. You can __issue terminal commands__ by prefacing the command with an exclamation point (!)"
    ]
   },
   {
@@ -261,19 +291,7 @@
       "\u001b[34mImages\u001b[m\u001b[m                          USA_Today_4_25_16.txt\n",
       "JupyterTutorial.ipynb           USA_Today_4_25_16_xkcdified.txt\n",
       "README.md                       trees.txt\n",
-      "State_Of_Union_2015.txt         xkcd_substitutions.txt\n",
-      "\n",
-      "We can also view files. The first lines of trees.txt are:\n",
-      "Index\tGirth\tHeight\tVolume\n",
-      "1\t8.3\t70\t10.3\n",
-      "2\t8.6\t65\t10.3\n",
-      "3\t8.8\t63\t10.2\n",
-      "4\t10.5\t72\t16.4\n",
-      "5\t10.7\t81\t18.8\n",
-      "6\t10.8\t83\t19.7\n",
-      "7\t11\t66\t15.6\n",
-      "8\t11\t75\t18.2\n",
-      "9\t11.1\t80\t22.6\n"
+      "State_Of_Union_2015.txt         xkcd_substitutions.txt\n"
      ]
     }
    ],
@@ -287,9 +305,47 @@
     "!ls\n",
     "print \"\\nAlright, let's remove it.\"\n",
     "!rm -r newdir\n",
-    "!ls\n",
+    "!ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "We can also view files. The first lines of trees.txt are:\n",
+      "Index\tGirth\tHeight\tVolume\r\n",
+      "1\t8.3\t70\t10.3\r\n",
+      "2\t8.6\t65\t10.3\r\n",
+      "3\t8.8\t63\t10.2\r\n",
+      "4\t10.5\t72\t16.4\r\n",
+      "5\t10.7\t81\t18.8\r\n",
+      "6\t10.8\t83\t19.7\r\n",
+      "7\t11\t66\t15.6\r\n",
+      "8\t11\t75\t18.2\r\n",
+      "9\t11.1\t80\t22.6\r\n"
+     ]
+    }
+   ],
+   "source": [
     "print \"\\nWe can also view files. The first lines of trees.txt are:\"\n",
     "!head trees.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One caveat: Jupyter __can't handle interactive terminal commands__ (for example, launching Microsoft Word from inside the terminal). It's usually best for changing directories and viewing files.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -353,16 +409,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Jupyter has builtin __magic commands.__\n",
+    "Jupyter has builtin __magic commands.__ These are a small set of convenient commands.\n",
     "\n",
-    "Say I have some to time my code. \n",
+    "Say I'd like to time my code. \n",
     "\n",
     "Easy: `add %time` to do so."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -372,11 +428,11 @@
      "output_type": "stream",
      "text": [
       "time for short code: \n",
-      "CPU times: user 5 µs, sys: 14 µs, total: 19 µs\n",
-      "Wall time: 29.1 µs\n",
+      "CPU times: user 4 µs, sys: 8 µs, total: 12 µs\n",
+      "Wall time: 24.1 µs\n",
       "time for long code: \n",
-      "CPU times: user 698 ms, sys: 154 ms, total: 852 ms\n",
-      "Wall time: 950 ms\n"
+      "CPU times: user 639 ms, sys: 194 ms, total: 833 ms\n",
+      "Wall time: 1.03 s\n"
      ]
     }
    ],
@@ -396,9 +452,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If the cell ever takes too long to run, you can stop the kernel by clicking the \"Stop\" button in the toolbar.\n",
+    "If the cell ever takes too long to run, you can __stop the kernel__ by clicking the \"Stop\" button in the toolbar.\n",
     "\n",
-    "Or, you can restart. Note that this will erase all the variables."
+    "Or, you can __restart__. Note that this, unlike stop, will __erase all variables and all imported libraries__. It is literally a restart.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -450,13 +508,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One other extremely convenient feature is __tab completion__. \n",
+    "\n",
+    "First, let's declare some annoying long names."
+   ]
   },
   {
    "cell_type": "code",
@@ -478,7 +536,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Type the first few letters and press `Tab`.\n",
+    "Now, type the first few letters and press `Tab`.\n",
     "\n",
     "![tab_completion_a_1](https://github.com/lujonathanh/JupyterTutorial/raw/master/Images/tab_completion_a_1.png)\n",
     "\n",
@@ -495,12 +553,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.slightly_shorter_function_name>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# Now you try it!\n",
+    "\n",
     "# No more typing!\n",
     "an_annoyingly_long_variable_name\n",
     "\n",
@@ -517,7 +588,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also automatically look up the attributes and functions of your object by inserting a `.` and hitting `tab`.\n",
+    "You can also automatically __look up the attributes and functions__ of your object by inserting a `.` and hitting `tab`.\n",
     "\n",
     "![tab_completion_f_1](https://github.com/lujonathanh/JupyterTutorial/raw/master/Images/tab_completion_f_1.png)\n",
     "\n",
@@ -568,8 +639,10 @@
     "collapsed": true
    },
    "source": [
+    "<a id='Python'></a>\n",
     "Part 2: Basics of Python\n",
-    "========================"
+    "========================\n",
+    "<a href='#TableOfContents'>Back to Table of Contents</a>"
    ]
   },
   {
@@ -688,6 +761,139 @@
     "\n",
     "a.reverse()\n",
     "print \"Reverse a: \", a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It's also easy to __make lists filled with a specific element(s)__ using Python multiplication!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "list 1 is  ['b', 'a']\n",
+      "list 2 is  ['n', 'a']\n",
+      "list 3 is  ['b', 'a', 'n', 'a', 'n', 'a']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = ['b', 'a']\n",
+    "print \"list 1 is \", list1\n",
+    "list2 = ['n', 'a']\n",
+    "print \"list 2 is \", list2\n",
+    "\n",
+    "# now let's first double list 2, then concatenate it with list 1\n",
+    "list3 = list1 + list2 * 2\n",
+    "print \"list 3 is \", list3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Also, __strings can be treated as lists of characters__. How cool is that? They have a bunch of useful functions associated."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first two letters of bean are  be\n",
+      "Length of the word cheese is  6\n",
+      "Give me 5 beans.  beanbeanbeanbeanbean\n",
+      "Give me some beans and cheese.  beancheese\n",
+      "Give me some capitalized Cheese. Cheese\n",
+      "Does cheese start with 'ch'?  True\n"
+     ]
+    }
+   ],
+   "source": [
+    "stringCheese = \"cheese\"\n",
+    "stringBean = 'bean'\n",
+    "print \"The first two letters of\", stringBean, \"are \", stringBean[0:2]\n",
+    "print \"Length of the word cheese is \", len(stringCheese)\n",
+    "print \"Give me 5 beans. \", 5 * stringBean\n",
+    "print \"Give me some beans and cheese. \", stringBean + stringCheese\n",
+    "print \"Give me some capitalized Cheese.\", stringCheese.capitalize()\n",
+    "print \"Does cheese start with 'ch'? \", stringCheese.startswith('ch')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Let's split hamlet's quote up at the or.  ('to be ', 'or', ' not to be')\n",
+      "What's the part of the sentence after the or? to be \n",
+      "What's the part of the sentence after the or?  not to be\n",
+      "Remove spaces at the beginning and end of string:  supercaliffragilistic\n"
+     ]
+    }
+   ],
+   "source": [
+    "hamlet = \"to be or not to be\"\n",
+    "print \"Let's split hamlet's quote up at the or. \", hamlet.partition(\"or\")\n",
+    "print \"What's the part of the sentence after the or?\", hamlet.partition(\"or\")[0]\n",
+    "print \"What's the part of the sentence after the or?\", hamlet.partition(\"or\")[2]\n",
+    "\n",
+    "\n",
+    "annoying_spaces = \"         supercaliffragilistic      \"\n",
+    "print \"Remove spaces at the beginning and end of string: \", \\\n",
+    "    annoying_spaces.strip(\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A sentence made by joining a list:  this sentence cannot be translated into pig latin\n",
+      "A pig latin sentence: histay entencesay annotcay ebay ranslatedtay ntoiay igpay atinlay\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = [\"this\", \"sentence\", \"cannot\", \"be\", \"translated\", \"into\", \"pig\", \"latin\"]\n",
+    "# The space joins all the elements of the setnence\n",
+    "print \"A sentence made by joining a list: \", \" \".join(sentence)\n",
+    "\n",
+    "pig_latin_sentence = []\n",
+    "for word in sentence:\n",
+    "    first_letter = word[0]\n",
+    "    last_letters = word[1:]\n",
+    "    new_word = last_letters + first_letter + \"ay\"\n",
+    "    pig_latin_sentence.append(new_word)\n",
+    "print \"A pig latin sentence:\", \" \".join(pig_latin_sentence)"
    ]
   },
   {
@@ -1059,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -1079,10 +1285,6 @@
     }
    ],
    "source": [
-    "# Let's learn about dictionaries\n",
-    "# These are a convenient way to easily access and look up anything, it can even be an object\n",
-    "\n",
-    "\n",
     "webster = {}\n",
     "\n",
     "webster['apple'] = 'a red fruit'\n",
@@ -1267,7 +1469,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part 3: Reading and writing files: featuring xkcd"
+    "<a id='Reading'></a>\n",
+    "# Part 3: Reading and writing files: featuring xkcd\n",
+    "<a href='#TableOfContents'>Back to Table of Contents</a>"
    ]
   },
   {
@@ -1479,8 +1683,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Part 3: Basic Data Analysis\n",
+    "<a id='DataAnalysis'></a>\n",
+    "Part 3: Data Analysis, featuring numpy, scipy, and matplotlib\n",
     "================================================================\n",
+    "<a href='#TableOfContents'>Back to Table of Contents</a>\n",
+    "\n",
     "In this section we'll learn how to perform basic data analysis techniques like __plotting, regression__, and __interpolation.__\n",
     "\n",
     "First, let's import the basic libraries and define our datafile.\n",
@@ -2087,8 +2294,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='Conclusion'></a>\n",
     "Conclusion\n",
     "==========\n",
+    "<a href='#TableOfContents'>Back to Table of Contents</a>\n",
     "\n",
     "And that's it! I hope you had fun during this tutorial. As a summary, we covered:\n",
     "\n",
@@ -2104,24 +2313,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='Sources'></a>\n",
     "Sources\n",
     "=======\n",
+    "<a href='#TableOfContents'>Back to Table of Contents</a>\n",
     "    \n",
-    "https://plot.ly/python/ipython-notebook-tutorial/\n",
-    "https://www.youtube.com/watch?v=DUCQ_HZamhs\n",
-    "https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet\n",
-    "https://stat.ethz.ch/R-manual/R-devel/library/datasets/html/00Index.html (for trees.txt)\n",
-    "http://www.usatoday.com/story/news/politics/elections/2016/04/25/suffolk-poll-trump-clinton-party-divides-president-republican-democrat/83487862/ (for USA_Today_4_25_16.txt)"
+    "1. https://plot.ly/python/ipython-notebook-tutorial/ Another great tutorial, more advanced than this one!\n",
+    "\n",
+    "2. https://www.youtube.com/watch?v=e9cSF3eVQv0 A great video tutorial. Fun data analysis with pandas at the end.\n",
+    "\n",
+    "3. https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet The name says it all-- a cheatsheet for the Markdown langugae\n",
+    "\n",
+    "4. https://stat.ethz.ch/R-manual/R-devel/library/datasets/html/00Index.html (for the trees.txt dataset)\n",
+    "\n",
+    "5. http://www.usatoday.com/story/news/politics/elections/2016/04/25/suffolk-poll-trump-clinton-party-divides-president-republican-democrat/83487862/ (for USA_Today_4_25_16.txt)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
