--- a/JupyterTutorial.ipynb
+++ b/JupyterTutorial.ipynb
@@ -691,7 +691,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, you can pull up the documentation for a variable or function by __clicking in the variable and hitting `Shift + Tab`__."
+    "Finally, you can pull up the documentation for a variable or function by __clicking in the variable and hitting `Shift + Tab`__.\n",
+    "\n",
+    "For example:\n",
+    "\n",
+    "![list_first](https://github.com/lujonathanh/JupyterTutorial/raw/master/Images/list_first.png)\n",
+    "\n",
+    "![list_docstring](https://github.com/lujonathanh/JupyterTutorial/raw/master/Images/list_docstring.png)\n",
+    "\n",
+    "Or for functions:\n",
+    "\n",
+    "![set_first](https://github.com/lujonathanh/JupyterTutorial/raw/master/Images/set_first.png)\n",
+    "\n",
+    "![set_docstring](https://github.com/lujonathanh/JupyterTutorial/raw/master/Images/set_docstring.png)"
    ]
   },
   {
